fix image preview div size; make submit button disabled instead of invisible; small tweaks

--- a/src/Whatsyourface.Frontend/wwwroot/css/site.css
+++ b/src/Whatsyourface.Frontend/wwwroot/css/site.css
@@ -12,6 +12,12 @@ body {
     padding-right: 15px;
 }
 
+.header-overlay {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+}
+
 /* Carousel */
 .carousel-caption p {
     font-size: 20px;
@@ -29,9 +35,16 @@ body {
     width: 0px;
 }
 
+.mainarea {
+    height: 310px;
+}
+
+.img-preview {
+    max-width: 200px;
+    max-height: 200px;
+}
+
 .footer {
-    position: absolute;
-    bottom: 0;
     padding: 1rem;
 }
 
